# vystak

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Justfile  LICENSE  PROJECT_PLAN.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test_plan.md
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: getting-started.md  principles.md
docs/superpowers/plans/: 2026-04-11-core-sdk-schema.md  2026-04-11-docker-provider-cli.md  2026-04-11-langchain-adapter.md  2026-04-11-monorepo-scaffold.md  2026-04-12-a2a-server.md  2026-04-12-channels-gateway-spec1.md  2026-04-12-channels-gateway-spec2.md  2026-04-12-long-term-memory.md  2026-04-12-mcp-integration.md  2026-04-12-persisted-resources.md  2026-04-12-real-tool-loading.md  2026-04-12-schema-refactor.md  2026-04-13-azure-provider-phase2a.md  2026-04-13-dev-server.md  2026-04-13-provision-graph.md  2026-04-13-test-examples.md  2026-04-14-multi-agent-loader.md  2026-04-14-openai-compatible-api.md  2026-04-15-azure-managed-postgres.md  2026-04-15-responses-api.md  2026-04-16-docs-content-phase1.md  2026-04-16-docs-portal.md  2026-04-16-visual-refresh.md  2026-04-19-secret-manager.md  2026-04-19-transport-abstraction-plan-a.md  2026-04-20-hashicorp-vault-backend.md  2026-04-20-transport-plan-b-nats.md  2026-04-20-transport-plan-c-responses-over-transport.md  2026-04-22-workspace-compute-unit.md  2026-04-23-secret-manager-simplification.md  2026-04-24-slack-self-serve-routing.md  2026-04-25-slack-agent-threads.md  2026-04-25-subagents.md  2026-04-26-langchain-adapter-shared-turn-core.md  2026-04-26-session-compaction.md  2026-04-27-slack-tool-call-streaming.md
docs/superpowers/specs/: 2026-04-11-core-sdk-schema-design.md  2026-04-11-docker-provider-cli-design.md  2026-04-11-getting-started-docs-design.md  2026-04-11-langchain-adapter-design.md  2026-04-11-monorepo-scaffold-design.md  2026-04-12-a2a-server-design.md  2026-04-12-channels-gateway-spec1-design.md  2026-04-12-channels-gateway-spec2-design.md  2026-04-12-long-term-memory-design.md  2026-04-12-mcp-integration-design.md  2026-04-12-persisted-resources-design.md  2026-04-12-real-tool-loading-design.md  2026-04-12-schema-refactor-design.md  2026-04-13-azure-provider-design.md  2026-04-13-dev-server-design.md  2026-04-13-multi-agent-deploy-design.md  2026-04-13-provision-graph-design.md  2026-04-13-test-examples-design.md  2026-04-14-openai-compatible-api-design.md  2026-04-15-azure-managed-postgres-design.md  2026-04-15-responses-api-design.md  2026-04-16-docs-content-phase1-design.md  2026-04-16-docs-portal-design.md  2026-04-16-visual-refresh-design.md  2026-04-19-secret-manager-design.md  2026-04-19-transport-abstraction-design.md  2026-04-20-hashicorp-vault-backend-design.md  2026-04-22-secret-manager-simplification-design.md  2026-04-22-workspace-compute-design.md  2026-04-24-slack-self-serve-routing-design.md  2026-04-25-session-compaction-design.md  2026-04-25-slack-agent-threads-design.md  2026-04-25-subagents-design.md  2026-04-26-langchain-adapter-shared-turn-core-design.md  2026-04-27-slack-tool-call-streaming-design.md  2026-05-02-channel-runtime-and-discord-design.md
examples/azure-chat/: README.md  vystak.py
examples/azure-minimal/: agentstack.yaml
examples/azure-multi-agent/: agentstack.py  agentstack.yaml  vystak.py  vystak.yaml
examples/azure-multi-agent/tools/: get_time.py  get_weather.py
examples/azure-multi-chat/: README.md  vystak.py
examples/azure-multi-chat/tools/: ask_time_agent.py  ask_weather_agent.py  get_weather.py
examples/azure-postgres-test/: agentstack.py  vystak.py
examples/azure-slack-multi-agent/: README.md  vystak.yaml
examples/azure-slack-multi-agent/tools/: get_time.py
examples/azure-vault/: .env.example  README.md  vystak.py  vystak.yaml
examples/azure-workspace-vault/: .env.example  README.md  vystak.py  vystak.yaml
examples/azure-workspace-vault/tools/: charge_card.py
examples/code-first/: agentstack.py  vystak.py
examples/docker-chat/: README.md  vystak.py
examples/docker-compaction/: .env.example  README.md  vystak.yaml
examples/docker-multi-chat/: README.md  vystak.py
examples/docker-multi-chat-nats/: README.md  vystak.py
examples/docker-slack/: .env.example  README.md  vystak.py  vystak.yaml
examples/docker-slack-multi-agent/: README.md  vystak.yaml
examples/docker-workspace-compute/: README.md  vystak.py  vystak.yaml
examples/docker-workspace-nodejs/: .env.example  README.md  vystak.yaml
examples/docker-workspace-vault/: .env.example  README.md  vystak.py  vystak.yaml
examples/hello-agent/: .env.example  README.md  agentstack.yaml  preview.py  vystak.yaml
examples/hello-agent/tools/: get_time.py  (+1 more)
examples/mcp-files/: agentstack.yaml
examples/memory-agent/: agentstack.yaml  vystak.yaml
examples/minimal/: agentstack.yaml  vystak.yaml
examples/multi-agent/: vystak.yaml
examples/sessions-postgres/: agentstack.yaml  vystak.yaml
scripts/: bump_version.py
website/: README.md  docusaurus.config.js  package.json  sidebars.js
website/static/: CNAME
(+62 files in other folders)
