[project]
name = "agentstack-workspace"
version = "0.0.0"
description = "AgentStack monorepo workspace root"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/python/*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "pyright>=1.1",
    "agentstack",
    "agentstack-cli",
    "agentstack-adapter-mastra",
    "agentstack-adapter-langchain",
    "agentstack-provider-docker",
    "agentstack-channel-api",
    "agentstack-gateway",
]

[tool.uv.sources]
agentstack = { workspace = true }
agentstack-cli = { workspace = true }
agentstack-adapter-mastra = { workspace = true }
agentstack-adapter-langchain = { workspace = true }
agentstack-provider-docker = { workspace = true }
agentstack-channel-api = { workspace = true }
agentstack-gateway = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["packages/python/*/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
