[project]
name = "vystak-workspace"
version = "0.0.0"
description = "Vystak monorepo workspace root"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/python/*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "pyright>=1.1",
    "vystak",
    "vystak-cli",
    "vystak-adapter-mastra",
    "vystak-adapter-langchain",
    "vystak-provider-docker",
    "vystak-channel-api",
    "vystak-gateway",
    "vystak-chat",
    "vystak-provider-azure",
]

[tool.uv.sources]
vystak = { workspace = true }
vystak-cli = { workspace = true }
vystak-adapter-mastra = { workspace = true }
vystak-adapter-langchain = { workspace = true }
vystak-provider-docker = { workspace = true }
vystak-channel-api = { workspace = true }
vystak-gateway = { workspace = true }
vystak-chat = { workspace = true }
vystak-provider-azure = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["packages/python/*/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
