[project]
name = "vystak-workspace"
version = "0.0.0"
description = "Vystak monorepo workspace root"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/python/*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "pyright>=1.1",
    "httpx>=0.28",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "asyncssh>=2.14",
    "vystak",
    "vystak-cli",
    "vystak-adapter-mastra",
    "vystak-adapter-langchain",
    "vystak-provider-docker",
    "vystak-channel-api",
    "vystak-channel-chat",
    "vystak-channel-slack",
    "vystak-chat",
    "vystak-provider-azure",
    "vystak-transport-http",
    "vystak-transport-nats",
    "vystak-workspace-rpc",
]

[tool.uv.sources]
vystak = { workspace = true }
vystak-cli = { workspace = true }
vystak-adapter-mastra = { workspace = true }
vystak-adapter-langchain = { workspace = true }
vystak-provider-docker = { workspace = true }
vystak-channel-api = { workspace = true }
vystak-channel-chat = { workspace = true }
vystak-channel-slack = { workspace = true }
vystak-chat = { workspace = true }
vystak-provider-azure = { workspace = true }
vystak-transport-http = { workspace = true }
vystak-transport-nats = { workspace = true }
vystak-workspace-rpc = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Code-generation modules emit literal Python source as strings; long lines are inherent.
"packages/python/vystak-adapter-langchain/src/vystak_adapter_langchain/a2a.py" = ["E501"]
"packages/python/vystak-adapter-langchain/src/vystak_adapter_langchain/responses.py" = ["E501"]
"packages/python/vystak-adapter-langchain/src/vystak_adapter_langchain/templates.py" = ["E501"]
"packages/python/vystak-channel-chat/src/vystak_channel_chat/server_template.py" = ["E501"]
"packages/python/vystak-channel-slack/src/vystak_channel_slack/server_template.py" = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["packages/python/*/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib -m 'not docker'"
asyncio_mode = "auto"
markers = [
    "docker: opt-in integration tests that spin up real Docker containers. Run with -m docker.",
]
